-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: hs19, 6, 6u4
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-2202396 | 7 | Y. Ramakrishna | P3 | Resolved | Fixed | b118 |
| JDK-2205875 | 6u25 | Y. Ramakrishna | P3 | Resolved | Fixed | b01 |
This can result in unnecessarily pessimistic initial bailout to a
full collection (concurrent mode failure) when a scavenge would in fact
have provably succeeded at the point at which the decision to bail out was made.
See related email in comments section.
Synopsis changed from:-
CMS/GCH: collection_attempt_is_safe() ergo should use more recent data
to:-
CMS/GCH: incremental_collection_will_fail() should use more current data
full collection (concurrent mode failure) when a scavenge would in fact
have provably succeeded at the point at which the decision to bail out was made.
See related email in comments section.
Synopsis changed from:-
CMS/GCH: collection_attempt_is_safe() ergo should use more recent data
to:-
CMS/GCH: incremental_collection_will_fail() should use more current data
- backported by
-
JDK-2202396 CMS/GCH: incremental_collection_will_fail() should use more current data
-
- Resolved
-
-
JDK-2205875 CMS/GCH: incremental_collection_will_fail() should use more current data
-
- Resolved
-
- duplicates
-
JDK-6261660 CMS promotion failure & gc_locker induced GC malinteraction
-
- Closed
-
-
JDK-6990095 Deprecate and eliminate -XX:-HandlePromotionFailure
-
- Closed
-
- relates to
-
JDK-6995045 assert(!gch->incremental_collection_failed()) failed: Error, defNewGeneration.cpp:827
-
- Resolved
-